Add csv files next to the Notebook as required by UDACITY

--- a/Seattle.ipynb
+++ b/Seattle.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,12 +43,12 @@
     "* calendar.csv ... shows detailed availability of properties and prices for the year 2016\n",
     "* reviews.csv .... detailed reviews (as full text) of properties\n",
     "\n",
-    "Please download the files and put them next to this file."
+    "The datasets (.csv files) are part of this project."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
        "2               1.15  "
       ]
      },
-     "execution_count": 328,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1100,7 @@
        "max            12.150000  "
       ]
      },
-     "execution_count": 329,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1120,7 @@
        "(3818, 92)"
       ]
      },
-     "execution_count": 330,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1210,7 +1210,7 @@
        "4      241032  2016-01-08         f     NaN"
       ]
      },
-     "execution_count": 331,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1297,7 +1297,7 @@
        "max    1.034016e+07"
       ]
      },
-     "execution_count": 332,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1308,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1317,7 @@
        "(1393570, 4)"
       ]
      },
-     "execution_count": 333,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1329,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1427,7 @@
        "4  Kelly was a great host and very accommodating ...  "
       ]
      },
-     "execution_count": 334,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1438,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1447,7 +1447,7 @@
        "(84849, 6)"
       ]
      },
-     "execution_count": 335,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1467,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1477,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1486,7 +1486,7 @@
        "0"
       ]
      },
-     "execution_count": 337,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1498,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1532,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1599,7 +1599,7 @@
        "4                   Queen Anne  450.0"
       ]
      },
-     "execution_count": 340,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1618,7 +1618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1744,7 +1744,7 @@
        "Delridge                       83.278481"
       ]
      },
-     "execution_count": 345,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1758,7 +1758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1834,7 +1834,7 @@
        "max    177.672131"
       ]
      },
-     "execution_count": 346,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1845,7 +1845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1855,7 +1855,7 @@
        " <a list of 17 Text xticklabel objects>)"
       ]
      },
-     "execution_count": 347,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1881,16 +1881,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.table.Table at 0x1a33783bcc8>"
+       "<matplotlib.table.Table at 0x29844995b08>"
       ]
      },
-     "execution_count": 348,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1928,7 +1928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -2007,7 +2007,7 @@
        "4      241032  2016-01-08         f     NaN"
       ]
      },
-     "execution_count": 349,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2018,7 +2018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2029,7 +2029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -2096,7 +2096,7 @@
        "4  2016-01-08    NaN"
       ]
      },
-     "execution_count": 351,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2107,29 +2107,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([<matplotlib.axis.XTick at 0x1a351e114c8>,\n",
-       "  <matplotlib.axis.XTick at 0x1a3378b8848>,\n",
-       "  <matplotlib.axis.XTick at 0x1a3378cc808>,\n",
-       "  <matplotlib.axis.XTick at 0x1a33790cc48>,\n",
-       "  <matplotlib.axis.XTick at 0x1a33790cd48>,\n",
-       "  <matplotlib.axis.XTick at 0x1a337916a88>,\n",
-       "  <matplotlib.axis.XTick at 0x1a33791a388>,\n",
-       "  <matplotlib.axis.XTick at 0x1a33791ac08>,\n",
-       "  <matplotlib.axis.XTick at 0x1a3379204c8>,\n",
-       "  <matplotlib.axis.XTick at 0x1a337920d48>,\n",
-       "  <matplotlib.axis.XTick at 0x1a3379235c8>,\n",
-       "  <matplotlib.axis.XTick at 0x1a337923e48>,\n",
-       "  <matplotlib.axis.XTick at 0x1a337928748>],\n",
+       "([<matplotlib.axis.XTick at 0x29844a25788>,\n",
+       "  <matplotlib.axis.XTick at 0x298449530c8>,\n",
+       "  <matplotlib.axis.XTick at 0x298449fb348>,\n",
+       "  <matplotlib.axis.XTick at 0x29844a52388>,\n",
+       "  <matplotlib.axis.XTick at 0x29844a52b88>,\n",
+       "  <matplotlib.axis.XTick at 0x29844a55408>,\n",
+       "  <matplotlib.axis.XTick at 0x29844a55d48>,\n",
+       "  <matplotlib.axis.XTick at 0x29844a5b6c8>,\n",
+       "  <matplotlib.axis.XTick at 0x29844a5f0c8>,\n",
+       "  <matplotlib.axis.XTick at 0x29844a5f988>,\n",
+       "  <matplotlib.axis.XTick at 0x29844a642c8>,\n",
+       "  <matplotlib.axis.XTick at 0x29844a64c08>,\n",
+       "  <matplotlib.axis.XTick at 0x29844a5b7c8>],\n",
        " <a list of 13 Text xticklabel objects>)"
       ]
      },
-     "execution_count": 352,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2162,7 +2162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2238,7 +2238,7 @@
        "max    157.480000"
       ]
      },
-     "execution_count": 353,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2249,7 +2249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -2258,7 +2258,7 @@
        "7.713178497717234"
       ]
      },
-     "execution_count": 354,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2321,7 +2321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2331,7 +2331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2344,7 +2344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2400,7 +2400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -2498,7 +2498,7 @@
        "5       True         True  "
       ]
      },
-     "execution_count": 363,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2512,7 +2512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -2640,7 +2640,7 @@
        "review                   0.057994   0.035205     0.059902  1.000000  "
       ]
      },
-     "execution_count": 364,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2658,16 +2658,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a337b26c48>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x29844aa6f48>"
       ]
      },
-     "execution_count": 365,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2709,7 +2709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2723,7 +2723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2766,7 +2766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2779,10 +2779,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import r2_score, mean_squared_error\n",
+    "\n",
     "# Let us use the very nice and useful function from the Udacity lesson that uses cutoffs to\n",
     "# reduces the impact of overfitting and gives us a nice visualization of the number of features\n",
     "# vs. r2 score.\n",
@@ -2850,7 +2854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -2874,7 +2878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -2883,7 +2887,7 @@
        "0.6029664485598705"
       ]
      },
-     "execution_count": 371,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
